# SNTSN_Tura_power_outage_bot

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: bot_logging.py  config.py  env.py  main.py  parsing.py  start.sh  telegram.py  tools.py
